worked more on the responsiveness and also on the toggler

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               federal capital territory of Nigeria
             </p>
           </div>
-          <div class="grid-container col-md-3">
+          <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">computer operator</h2>
             <h4 class="text-capitalize">d-eagles eye computer institute</h4>
@@ -187,7 +187,7 @@
             </p>
           </div>
 
-          <div class="grid-container col-md-3">
+          <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">computer operator</h2>
             <h4 class="text-capitalize">university of Abuja</h4>
@@ -202,7 +202,7 @@
               federal capital territory of Nigeria
             </p>
           </div>
-          <div class="grid-container col-md-3">
+          <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">computer operator</h2>
             <h4 class="text-capitalize">d-eagles eye computer institute</h4>
