i made some changes to the navbar

--- a/index.html
+++ b/index.html
@@ -62,14 +62,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
-              <div class="tcontainer my-auto" id="t-container">
-                <div
-                  class="circle-toggle"
-                  id="circle-one"
-                  style="background-color: white"
-                ></div>
-                <div class="circle-toggle" id="circle-two"></div>
-              </div>
             </ul>
           </div>
         </div>
@@ -137,6 +129,10 @@
             <div class="col-5">Course of Study:</div>
             <div class="col-7">Bsc. Economics</div>
           </div>
+          <div class="row d-flex">
+            <div class="col-5">Institution of Study:</div>
+            <div class="col-7">University of Abuja</div>
+          </div>
         </div>
       </section>
       <!-- ! this is the start of section three 'RESUME' -->
@@ -189,7 +185,7 @@
 
           <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">computer operator</h2>
+            <h2 class="text-capitalize">Typist</h2>
             <h4 class="text-capitalize">university of Abuja</h4>
             <img
               src="assets/uniabuja.jpg"
@@ -204,8 +200,8 @@
           </div>
           <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">computer operator</h2>
-            <h4 class="text-capitalize">d-eagles eye computer institute</h4>
+            <h2 class="text-capitalize">Receptionist</h2>
+            <h4 class="text-capitalize">Wembley Park and Garden</h4>
             <img
               src="assets/eagle.jpg"
               alt=""
