worked on the service grid and also reduced the font size

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="container text-uppercase">
           <div class="row gap-2 justify-content-center">
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3 gap-3"
               style="
                 background-image: url('assets/devops-mobile-app-development.jpg');
               "
@@ -241,32 +241,32 @@
               <h4>Web design</h4>
             </div>
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3 gap-3"
               style="background-image: url('assets/photography2.jpeg')"
             >
               <h4>photography</h4>
             </div>
 
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3"
               style="background-image: url('assets/economist_2.png')"
             >
               <h4>economist</h4>
             </div>
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3"
               style="background-image: url('assets/web\ development\ 2.png')"
             >
               <h4>app developing</h4>
             </div>
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3"
               style="background-image: url('assets/Word.jpg')"
             >
               <h4>typist</h4>
             </div>
             <div
-              class="service-grid col-xl-4"
+              class="service-grid col-lg-3 col-md-3"
               style="background-image: url('assets/branding2.jpg')"
             >
               <h4>branding</h4>
