worked on the contact section

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           </div>
           <div class="grid-container col-md-3 col-sm-12">
             <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">computer operator</h2>
-            <h4 class="text-capitalize">d-eagles eye computer institute</h4>
+            <h2 class="text-capitalize">Auditor</h2>
+            <h4 class="text-capitalize">Chinox Nigeria Limited</h4>
             <img
               src="assets/eagle.jpg"
               alt=""
@@ -494,23 +494,31 @@
           </p>
         </div>
         <form
-          action="submit"
-          class="d-flex justify-content-center align-items-center"
+          action="submit "
+          class="d-flex justify-content-center flex-column align-items-center"
         >
-          <fieldset
-            class="d-flex justify-content-center align-items-center flex-column gap-2"
-          >
-            <div>
-              <input type="text" placeholder="Name" />
+          <div>
+            <input class="mb-3 mx-2" placeholder="Enter Your Name" />
+          </div>
+          <div>
+            <div class="mb-3">
+              <input
+                id="message"
+                rows="3"
+                placeholder="Enter Your Message"
+                style="padding-bottom: 30px"
+              />
             </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <textarea placeholder="Your message"></textarea>
-            </div>
-            <button class="btn btn-success btn-md mb-2">Send</button>
-          </fieldset>
+          </div>
+          <div>
+            <button
+              type="button"
+              class="btn btn-primary mb-2"
+              style="width: 300px"
+            >
+              Send Message
+            </button>
+          </div>
         </form>
       </section>
     </main>
