--- a/index.html
+++ b/index.html
@@ -557,13 +557,17 @@
       <div class="text-center flex-column d-flex justify-content-center">
         <a href="#" class="text-decoration-none text-danger text-center"
           >Back to Top</a
+        ><small id="time"
+          ><span id="hour">1</span>:<span id="minutes">43</span>:<span
+            id="seconds"
+            >56</span
+          ><span id="ampm">pm</span></small
         >
         <small class="text-white text-center"
           >Peter Sambo &copy; 2023 All Rights Reserved</small
         >
       </div>
     </footer>
-
     <script src="bootstrap/bootstrap.js"></script>
     <script src="script.js"></script>
   </body>
