worked on the date and the time

--- a/index.html
+++ b/index.html
@@ -557,12 +557,13 @@
       <div class="text-center flex-column d-flex justify-content-center">
         <a href="#" class="text-decoration-none text-danger text-center"
           >Back to Top</a
-        ><small id="time"
-          ><span id="hour">1</span>:<span id="minutes">43</span>:<span
-            id="seconds"
-            >56</span
-          ><span id="ampm">pm</span></small
-        >
+        ><small id="time">
+          <span id="day"></span><span id="dayTwo"></span><span id="month"></span
+          ><span id="year"></span> <span id="hour"></span>:<span
+            id="minutes"
+          ></span
+          >:<span id="seconds"></span><span id="ampm"></span
+        ></small>
         <small class="text-white text-center"
           >Peter Sambo &copy; 2023 All Rights Reserved</small
         >
