--- a/index.html
+++ b/index.html
@@ -147,67 +147,47 @@
           with Mega Brains and Eagle-Eye computer institute among others.
         </p>
       </section>
-      <!-- ! this is the start of section four -->
-      <section
-        class="section-four container justify-content-around text-center"
-      >
-        <div class="row justify-content-evenly gap-3">
-          <div class="grid-container col-md-3">
+      <!-- ! this is the start of section four i.e the resume section -->
+      <section class="section-four container-fluid container-sm text-center">
+        <div
+          class="row justify-content-md-between justify-content-sm-center justify-content-lg-between"
+        >
+          <div class="grid-container col-md-3 col-sm-12 col-lg-6">
             <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">Computer Lab Operator</h2>
-            <h4 class="text-capitalize">university of Abuja</h4>
-            <img
-              src="assets/uniabuja.jpg"
-              alt=""
-              width="50px"
-              class="rounded-circle"
-            />
+            <h2 class="text-capitalize">Lab Operator</h2>
+            <h4 class="text-capitalize fst-italic">university of Abuja</h4>
+            <img src="assets/uniabuja.jpg" alt="" class="rounded-circle" />
             <p>
-              i studied economics from the university of abuja located in the
-              federal capital territory of Nigeria
+              I worked as a computer lab operator in the ICT center of the
+              University of Abuja between 2018 and 2024
             </p>
           </div>
-          <div class="grid-container col-md-3 col-sm-12">
+          <div class="grid-container col-md-3 col-sm-12 col-lg-6">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">Auditor</h2>
-            <h4 class="text-capitalize">Chinox Nigeria Limited</h4>
-            <img
-              src="assets/eagle.jpg"
-              alt=""
-              class="rounded-circle"
-              width="50px"
-            />
+            <h4 class="text-capitalize fst-italic">Chinox Nigeria Limited</h4>
+            <img src="assets/eagle.jpg" alt="" class="rounded-circle" />
             <p>
               i studied economics from the university of abuja located in the
               federal capital territory of Nigeria
             </p>
           </div>
 
-          <div class="grid-container col-md-3 col-sm-12">
+          <div class="grid-container col-md-3 col-sm-12 col-lg-6">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">Typist</h2>
-            <h4 class="text-capitalize">university of Abuja</h4>
-            <img
-              src="assets/uniabuja.jpg"
-              alt=""
-              width="50px"
-              class="rounded-circle"
-            />
+            <h4 class="text-capitalize fst-italic">university of Abuja</h4>
+            <img src="assets/uniabuja.jpg" alt="" class="rounded-circle" />
             <p>
               i studied economics from the university of abuja located in the
               federal capital territory of Nigeria
             </p>
           </div>
-          <div class="grid-container col-md-3 col-sm-12">
+          <div class="grid-container col-md-3 col-sm-12 col-lg-6">
             <h3 class="text-danger">2018-2024</h3>
             <h2 class="text-capitalize">Receptionist</h2>
-            <h4 class="text-capitalize">Wembley Park and Garden</h4>
-            <img
-              src="assets/eagle.jpg"
-              alt=""
-              class="rounded-circle"
-              width="50px"
-            />
+            <h4 class="text-capitalize fst-italic">Wembley Park and Garden</h4>
+            <img src="assets/eagle.jpg" alt="" class="rounded-circle" />
             <p>
               i studied economics from the university of abuja located in the
               federal capital territory of Nigeria
@@ -216,7 +196,9 @@
         </div>
       </section>
       <!-- ! this is the start of section five 'SERVICE' -->
-      <section class="section-five">
+      <section
+        class="section-five container-fluid justify-content-evenly container-sm"
+      >
         <div class="text-center container">
           <h2 class="text-capitalize display-5 text-danger" id="services">
             services
@@ -230,10 +212,10 @@
           </p>
         </div>
 
-        <div class="container text-uppercase">
-          <div class="row gap-2 justify-content-center">
+        <div class="container-fluid text-uppercase">
+          <div class="row justify-content-center">
             <div
-              class="service-grid col-lg-3 col-md-3 gap-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="
                 background-image: url('assets/devops-mobile-app-development.jpg');
               "
@@ -241,32 +223,32 @@
               <h4>Web design</h4>
             </div>
             <div
-              class="service-grid col-lg-3 col-md-3 gap-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/photography2.jpeg')"
             >
               <h4>photography</h4>
             </div>
 
             <div
-              class="service-grid col-lg-3 col-md-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/economist_2.png')"
             >
               <h4>economist</h4>
             </div>
             <div
-              class="service-grid col-lg-3 col-md-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/web\ development\ 2.png')"
             >
               <h4>app developing</h4>
             </div>
             <div
-              class="service-grid col-lg-3 col-md-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/Word.jpg')"
             >
               <h4>typist</h4>
             </div>
             <div
-              class="service-grid col-lg-3 col-md-3"
+              class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/branding2.jpg')"
             >
               <h4>branding</h4>
@@ -404,6 +386,11 @@
               data-bs-slide-to="4"
               aria-label="Fifth slide"
             ></li>
+            <li
+              data-bs-target="#carouselId"
+              data-bs-slide-to="5"
+              aria-label="Fifth slide"
+            ></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
@@ -453,6 +440,17 @@
             <div class="carousel-item">
               <img
                 src="assets/my twitter clone.PNG"
+                class="w-100 d-block"
+                alt="Fifth slide"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/my netflix clone 3.PNG"
                 class="w-100 d-block"
                 alt="Fifth slide"
               />
