--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
       <nav class="navbar navbar-expand-lg mb-3 text-light">
         <div class="container-fluid">
-          <h3 class="navbar-brand col-lg-7 logo text-primary" href="#">
+          <h6 class="navbar-brand col-lg-7 logo text-primary" href="#">
             peter<span id="sambo" class="text-danger">Sambo</span>
-          </h3>
+          </h6>
           <button
             class="navbar-toggler"
             type="button"
@@ -93,12 +93,12 @@
       <section class="section-two mt-5">
         <div class="container d-flex justify-content-center flex-column">
           <h1
-            class="text-center text-capitalize display-5 text-danger"
+            class="text-left text-capitalize display-5 text-danger"
             id="about"
           >
             about me
           </h1>
-          <p class="text-center">
+          <p class="text-left">
             With over three years of experience in the tech industry, i have
             developed a unique skill set that combines creative eye and also
             with a deep understanding of web development. i'm always looking for
@@ -136,7 +136,7 @@
         </div>
       </section>
       <!-- ! this is the start of section three 'RESUME' -->
-      <section class="section-three text-center container">
+      <section class="section-three text-left container">
         <h1 class="text-capitalize display-5 mt-3 text-danger" id="resume">
           Resume
         </h1>
@@ -153,9 +153,9 @@
           class="row justify-content-md-between justify-content-sm-center justify-content-lg-between"
         >
           <div class="grid-container col-md-3 col-sm-12 col-lg-6">
-            <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">Lab Operator</h2>
-            <h4 class="text-capitalize fst-italic">university of Abuja</h4>
+            <h6 class="text-danger">2018-2021</h6>
+            <p class="text-capitalize">Lab Operator</p>
+            <p class="text-capitalize fst-italic">university of Abuja</p>
             <img src="assets/uniabuja.jpg" alt="" class="rounded-circle" />
             <p>
               I worked as a computer lab operator in the ICT center of the
@@ -163,34 +163,38 @@
             </p>
           </div>
           <div class="grid-container col-md-3 col-sm-12 col-lg-6">
-            <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">Auditor</h2>
-            <h4 class="text-capitalize fst-italic">Chinox Nigeria Limited</h4>
-            <img src="assets/eagle.jpg" alt="" class="rounded-circle" />
+            <h6 class="text-danger">2021-2022</h6>
+            <p class="text-capitalize">Web Designer</p>
+            <p class="text-capitalize fst-italic">
+              Mega Brain Computer Institute
+            </p>
+            <img src="assets/brain.jpg" alt="" class="rounded-circle" />
             <p>
-              i studied economics from the university of abuja located in the
-              federal capital territory of Nigeria
+              I worked as a web designer for mega brain computer institute in
+              Jos, Plateau state capital between between 2021 and 2022
             </p>
           </div>
 
           <div class="grid-container col-md-3 col-sm-12 col-lg-6">
-            <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">Typist</h2>
-            <h4 class="text-capitalize fst-italic">university of Abuja</h4>
+            <h6 class="text-danger">2018-2021</h6>
+            <p class="text-capitalize">Typist</p>
+            <p class="text-capitalize fst-italic">university of Abuja</p>
             <img src="assets/uniabuja.jpg" alt="" class="rounded-circle" />
             <p>
-              i studied economics from the university of abuja located in the
-              federal capital territory of Nigeria
+              I also typed document for the in the ICT section of the university
+              of Abuja between 2018 - 2021
             </p>
           </div>
           <div class="grid-container col-md-3 col-sm-12 col-lg-6">
-            <h3 class="text-danger">2018-2024</h3>
-            <h2 class="text-capitalize">Receptionist</h2>
-            <h4 class="text-capitalize fst-italic">Wembley Park and Garden</h4>
+            <h6 class="text-danger">2022-2023</h6>
+            <p class="text-capitalize">Web Developer</p>
+            <p class="text-capitalize fst-italic">
+              D-Eagles Eye Computer Institute
+            </p>
             <img src="assets/eagle.jpg" alt="" class="rounded-circle" />
             <p>
-              i studied economics from the university of abuja located in the
-              federal capital territory of Nigeria
+              I worked as a web developer for D-Eagle eye computer institute in
+              Gombe State, Nigeria.
             </p>
           </div>
         </div>
@@ -199,10 +203,10 @@
       <section
         class="section-five container-fluid justify-content-evenly container-sm"
       >
-        <div class="text-center container">
-          <h2 class="text-capitalize display-5 text-danger" id="services">
+        <div class="text-left container">
+          <p class="text-capitalize display-5 text-danger" id="services">
             services
-          </h2>
+          </p>
           <p>
             I can render a lot of service for you ranging from Website design,
             Website development and Android App Development using React Native a
@@ -220,48 +224,48 @@
                 background-image: url('assets/devops-mobile-app-development.jpg');
               "
             >
-              <h4>Web design</h4>
+              <p>Web design</p>
             </div>
             <div
               class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/photography2.jpeg')"
             >
-              <h4>photography</h4>
+              <p>photography</p>
             </div>
 
             <div
               class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/economist_2.png')"
             >
-              <h4>economist</h4>
+              <p>economist</p>
             </div>
             <div
               class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/web\ development\ 2.png')"
             >
-              <h4>app developing</h4>
+              <p>app developing</p>
             </div>
             <div
               class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/Word.jpg')"
             >
-              <h4>typist</h4>
+              <p>typist</p>
             </div>
             <div
               class="service-grid col-md-4 col-sm-6 col-xs-12"
               style="background-image: url('assets/branding2.jpg')"
             >
-              <h4>branding</h4>
+              <p>branding</p>
             </div>
           </div>
         </div>
       </section>
       <!-- ! this is the start of section six 'SKILLS' -->
       <section class="section-six mt-3">
-        <div class="text-center container">
-          <h2 class="text-capitalize display-5 text-danger" id="skills">
+        <div class="text-left container">
+          <p class="text-capitalize display-5 text-danger" id="skills">
             Skills
-          </h2>
+          </p>
           <p>
             Below is my summary of skills i know, i'm good with HTML, CSS and
             Javascript. in addition, i know Bootstrap a css framework. i also
@@ -338,10 +342,10 @@
         </div>
       </section>
       <!-- ! this is the start of section seven 'PROJECTS'-->
-      <div class="container text-center">
-        <h2 class="display-5 text-capitalize text-danger" id="projects">
+      <div class="container text-left">
+        <p class="display-5 text-capitalize text-danger" id="projects">
           my projects
-        </h2>
+        </p>
         <p>
           I have done and completed over 12 projects using HTML, CSS,
           javascript, React.Js, Bootstrap, jQuery, tailwind, scss and node.Js.
@@ -400,7 +404,7 @@
                 alt="First slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3>peter</h3>
+                <h6>peter</h6>
                 <p>peter sambo</p>
               </div>
             </div>
@@ -411,7 +415,7 @@
                 alt="Second slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <h6></h6>
                 <p></p>
               </div>
             </div>
@@ -422,7 +426,7 @@
                 alt="Third slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <h6></h6>
                 <p></p>
               </div>
             </div>
@@ -433,7 +437,7 @@
                 alt="Forth slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <h6></h6>
                 <p></p>
               </div>
             </div>
@@ -444,7 +448,7 @@
                 alt="Fifth slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <h6></h6>
                 <p></p>
               </div>
             </div>
@@ -455,7 +459,7 @@
                 alt="Fifth slide"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <h6></h6>
                 <p></p>
               </div>
             </div>
@@ -491,15 +495,18 @@
           ></button>
 
           <strong>Wait!</strong> You can also
-          <a href="www.gihub.com/peter2great2" style="color: blue"
+          <a
+            href="http://www.github.com/peter2great2"
+            target="_blank"
+            style="color: blue"
             >click here</a
           >
           to see all my projects they are all live on github.
         </div>
       </div>
       <section class="section-eight mt-3">
-        <div class="container text-center">
-          <h2 class="display-5 text-danger" id="contact">Contact Me</h2>
+        <div class="container text-left">
+          <p class="display-5 text-danger" id="contact">Contact Me</p>
           <p>
             Do you have any question that you want to ask me? you can send me a
             message below by entering your name and your email address. your
@@ -546,10 +553,18 @@
       <div
         class="container-fluid p-3 mt-3 d-flex justify-content-center align-items-center gap-4"
       >
-        <img src="assets/icon-facebook.svg" alt="icon-facebook" />
-        <img src="assets/icon-twitter.svg" alt="icon-twitter" />
-        <img src="assets/icon-instagram.svg" alt="icon-instagram" />
-        <img src="assets/icon-pinterest.svg" alt="icon-pinterest" />
+        <a href="http://www.facebook.com/peter2great2" target="_blank">
+          <img src="assets/icon-facebook.svg" alt="icon-facebook" />
+        </a>
+        <a href="http://www.twitter.com/peter2great2" target="_blank">
+          <img src="assets/icon-twitter.svg" alt="icon-twitter" />
+        </a>
+        <a href="http://www.instagram.com/peter2great2" target="_blank">
+          <img src="assets/icon-instagram.svg" alt="icon-instagram" />
+        </a>
+        <a href="http://www.pininterest.com/peter2great2" target="_blank">
+          <img src="assets/icon-pinterest.svg" alt="icon-pinterest" />
+        </a>
       </div>
 
       <div class="text-center flex-column d-flex justify-content-center">
