--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </div>
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
-              <p>javascript</p>
+              <p>Javascript</p>
               <p class="percent">80%</p>
             </div>
 
@@ -298,7 +298,7 @@
           </div>
           <div class="">
             <div class="d-flex justify-content-between align-items-end">
-              <p>react.js</p>
+              <p>React JS</p>
               <p class="percent">70%</p>
             </div>
 
@@ -309,7 +309,7 @@
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>jQuery</p>
+              <p>Express JS</p>
               <p class="percent">85%</p>
             </div>
 
@@ -320,7 +320,7 @@
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>bootstrap</p>
+              <p>Bootstrap</p>
               <p class="percent">92%</p>
             </div>
 
@@ -331,7 +331,7 @@
 
           <div>
             <div class="d-flex justify-content-between align-items-end">
-              <p>SQL</p>
+              <p>Mongo DB</p>
               <p class="percent">60%</p>
             </div>
 
